@@ -1,7 +1,10 @@
 1.3.4
+- Added closure analysis.
 - Bugfix: Hans skin tries to close some left-over html tag to get a
   proper display
 - Change: Removed the jQuery setting
+- Bugfix: The display of the settings in the footer does do a
+  callable analysis anymore, which may be a little bit confusing.
 
 1.3.3
 - kreXX will now work without a writable chunks folder, but this will
